--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,11 +79,11 @@ body {
 }
 
 @utility text-eyebrow-large {
-  @apply text-[15px]/[125%] font-semibold  text-dark-brown;
+  @apply text-[18px]/[125%] font-semibold text-dark-brown;
 }
 
 @utility text-eyebrow-small {
-  @apply text-[12px]/[125%] font-semibold  text-dark-brown;
+  @apply text-[15px]/[125%] font-semibold  text-dark-brown;
 }
 
 @utility text-testemonial {
@@ -165,6 +165,30 @@ body {
 
       .ticker > div {
         @apply animate-marquee h-full w-full flex items-center gap-10 pr-10;
+      }
+    }
+  }
+
+  .about-app {
+    @apply flex w-full justify-center;
+
+    .wrapper {
+      @apply w-full max-w-5xl flex flex-col items-center gap-14;
+
+      .header {
+        @apply w-full max-w-200 flex flex-col items-center gap-5 text-center;
+      }
+
+      .about-app-images {
+        @apply relative overflow-hidden rounded-3xl w-full h-fit;
+
+        .about-app-image {
+          @apply md:h-175 h-125 w-full object-cover object-center shrink-0;
+        }
+
+        .about-app-buttons {
+          @apply absolute w-fit bottom-8 left-[50%] -translate-x-[50%] p-2 rounded-full flex gap-3 bg-[#E3E1E1]/25;
+        }
       }
     }
   }
