--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,7 +95,7 @@ body {
 }
 
 @utility content {
-  @apply bg-linear-to-t box-border from-blue-20 via-beige-20 to-beige-0 flex h-450 flex-col items-center lg:pb-40 md:pb-24 pb-20  lg:px-0 md:px-10 px-4 lg:gap-40 md:gap-24 gap-20;
+  @apply bg-linear-to-t box-border from-blue-20 via-beige-20 to-beige-0 flex flex-col items-center lg:pb-40 md:pb-24 pb-20  lg:px-0 md:px-10 px-4 lg:gap-40 md:gap-24 gap-20;
 }
 
 @keyframes marquee {
@@ -188,6 +188,42 @@ body {
 
         .about-app-buttons {
           @apply absolute w-fit bottom-8 left-[50%] -translate-x-[50%] p-2 rounded-full flex gap-3 bg-[#E3E1E1]/25;
+        }
+      }
+    }
+  }
+
+  .feature-image-wrapper {
+    @apply md:min-w-147 md:w-full lg:p-10 md:px-27 md:py-10 p-5 rounded-3xl bg-linear-to-t from-beige-40 to-blue-20;
+  }
+
+  .features {
+    @apply flex w-full justify-center;
+
+    .container {
+      @apply flex flex-col items-center gap-30 w-full max-w-5xl;
+
+      .block-1 {
+        @apply flex lg:flex-row flex-col-reverse gap-16 w-full;
+      }
+
+      .block-2 {
+        @apply flex lg:flex-row-reverse flex-col-reverse gap-16 w-full;
+      }
+
+      .feature-copy {
+        @apply flex flex-col lg:gap-0 gap-10 justify-between;
+
+        .top {
+          @apply flex flex-col gap-10;
+
+          .texts .header{
+            @apply flex flex-col gap-4;
+          }
+        }
+
+        .lists {
+          @apply grid grid-cols-2 grid-rows-2 gap-x-4 gap-y-4;
         }
       }
     }
