--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -268,4 +268,35 @@ body {
       @apply flex-nowrap gap-4 flex;
     }
   }
+
+  .reviews {
+    @apply flex w-full justify-center;
+
+    .container {
+      @apply flex flex-col items-center gap-14 w-full max-w-5xl;
+      
+      .big-review {
+        @apply  text-center flex flex-col items-center gap-5 lg:w-225;
+        
+        .big-testimonial {
+          @apply md:text-6xl/[145%] text-4xl/[145%] font-medium text-neutral-30;
+        }
+        .user-info {
+          @apply flex flex-col items-center gap-4 w-full min-w-100;
+        }
+      }
+
+      .review-row {
+        @apply w-full mask-[linear-gradient(to_right,transparent,black,transparent)] overflow-x-hidden;
+      }
+    }
+  }
+
+  .review-card {
+    @apply bg-white/70 p-8 flex flex-col gap-8 rounded-3xl h-fit w-95;
+
+    .user-info {
+      @apply flex gap-4 items-center;
+    }
+  }
 }
