--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -299,4 +299,21 @@ body {
       @apply flex gap-4 items-center;
     }
   }
+
+  .pricing {
+    @apply flex w-full justify-center;
+
+    .container {
+      @apply flex flex-col items-center gap-14 w-full max-w-5xl;
+    
+      .header {
+        @apply w-full max-w-200 flex flex-col items-center gap-5 text-center;
+      }
+
+      .pricing-cards {
+        @apply  flex flex-col lg:flex-row gap-6 w-full;
+      }
+    
+    }
+  }
 }
